updated contact section

--- a/index.html
+++ b/index.html
@@ -160,16 +160,22 @@
 
                     <!-- Col -->
                     <div class="center-align col s12 m4">
-                        <img id="about-pic" class="responsive-img" src="assets/images/perderales.jpg" height="300" width="300">
+                        <img id="about-pic" class="responsive-img" src="assets/images/perderales.jpg" height="300"
+                            width="300">
                     </div>
 
                     <!-- Col -->
                     <h5 id="about-text" class="col s12 m8">
-                        I am a full stack web developer from Austin, Texas. I have always had a passion for logic, efficiency, and problem solving, which ultimately led me to pursue a path in web development.
+                        I am a full stack web developer from Austin, Texas. I have always had a passion for logic,
+                        efficiency, and problem solving, which ultimately led me to pursue a path in web development.
                         <br><br>
-                        My interest in coding and development began as a kid when I became fascinated with technology. I took computer courses in high school whenever possible to gain more understanding of both hardware and software aspects of computers.
+                        My interest in coding and development began as a kid when I became fascinated with technology.
+                        I took computer courses in high school whenever possible to gain more understanding of both
+                        hardware and software aspects of computers.
                         <br><br>
-                        In 2018, I became certified a full stack web developer from The University of Texas at Austin. I have built 50+ applications using my knowledge gained from the course including: JavaScript, HTML, CSS, Node.js, React, MongoDB, SQL and more.
+                        In 2018, I became certified a full stack web developer from The University of Texas at Austin.
+                        I have built 50+ applications using my knowledge gained from the course including: JavaScript,
+                        HTML, CSS, Node.js, React, MongoDB, SQL and more.
 
                     </h5>
 
@@ -210,8 +216,7 @@
                 <div id="resume-button" class="row">
 
                     <div class="col s12 center-align">
-                        <a id="resume-button-color"
-                            class="waves-effect waves-light btn-large" href="assets/resume/mason-vickery-resume.pdf"
+                        <a id="resume-button-color" class="waves-effect waves-light btn-large" href="assets/resume/mason-vickery-resume.pdf"
                             target="_blank"><i class="material-icons left">mood</i>Resume</a>
                     </div>
 
@@ -418,19 +423,18 @@
         =============================================== -->
         <footer class="page-footer footer">
             <div class="container">
-                <div class="row">
+
+                <!-- <div class="row">
                     <div class="col s12">
                         <h5 class="white-text">Thanks for visiting my page!</h5>
                         <p class="grey-text text-lighten-4">Don't hesitate to contact me for projects, employment, or
                             just talking tech!</p>
                     </div>
-                </div>
+                </div> -->
 
-                <br>
-
-                <div class="row">
+                <div id="contact" class="row">
                     <div class="center-align">
-                        <h4>Contact</h4>
+                        <h2>Contact</h2>
 
 
 
@@ -454,19 +458,99 @@
 
                             </div> -->
 
-                        <div id="contact-icons">
-                            <span class="col s3">
-                                GitHub <i class="fab fa-github"></i>
-                            </span>
-                            <span class="col s3">
-                                Linkedin <i class="fab fa-linkedin"></i>
-                            </span>
-                            <span class="col s3">
-                                Email <i class="far fa-envelope"></i>
-                            </span>
-                            <span class="col s3">
-                                Resume <i class="far fa-file"></i>
-                            </span>
+                        <div>
+
+                            <!-- GitHub -->
+                            <div class="col s6 m3">
+
+                                <!-- Row -->
+                                <div class="row">
+
+                                    <!-- Icon -->
+                                    <div class="col s12">
+                                        <a href="https://github.com/mtvickery1" target="_blank">
+                                            <i class="fab fa-github fa-5x"></i>
+                                        </a>
+                                    </div>
+
+                                    <!-- Text -->
+                                    <div class="col s12">
+                                        <a href="https://github.com/mtvickery1" target="_blank">
+                                            GitHub
+                                        </a>
+                                    </div>
+
+                                </div>
+                            </div>
+
+                            <!-- Linkedin -->
+                            <div class="col s6 m3">
+
+                                <!-- Row -->
+                                <div class="row">
+
+                                    <!-- Icon -->
+                                    <div class="col s12">
+                                        <a href="https://www.linkedin.com/in/masonvickery/" target="_blank">
+                                            <i class="fab fa-linkedin fa-5x"></i>
+                                        </a>
+                                    </div>
+
+                                    <!-- Text -->
+                                    <div class="col s12">
+                                        <a href="https://github.com/mtvickery1" target="_blank">
+                                            Linkedin
+                                        </a>
+                                    </div>
+
+                                </div>
+                            </div>
+
+                            <!-- Email -->
+                            <div class="col s6 m3">
+
+                                <!-- Row -->
+                                <div class="row">
+
+                                    <!-- Icon -->
+                                    <div class="col s12">
+                                        <a href="mailto:mtvickery1@gmail.com" target="_blank">
+                                            <i class="far fa-envelope fa-5x"></i>
+                                        </a>
+                                    </div>
+
+                                    <!-- Text -->
+                                    <div class="col s12">
+                                        <a href="assets/resume/mason-vickery-resume.pdf" target="_blank">
+                                            Email
+                                        </a>
+                                    </div>
+
+                                </div>
+                            </div>
+
+                            <!-- Resume -->
+                            <div class="col s6 m3">
+
+                                <!-- Row -->
+                                <div class="row">
+
+                                    <!-- Icon -->
+                                    <div class="col s12">
+                                        <a href="https://github.com/mtvickery1" target="_blank">
+                                            <i class="far fa-file fa-5x"></i>
+                                        </a>
+                                    </div>
+
+                                    <!-- Text -->
+                                    <div class="col s12">
+                                        <a href="https://github.com/mtvickery1" target="_blank">
+                                            Resume
+                                        </a>
+                                    </div>
+
+                                </div>
+                            </div>
 
                         </div>
 
