removed AOS from projects due to mobile delay

--- a/index.html
+++ b/index.html
@@ -235,8 +235,7 @@
 
         <div class="project-section">
             <div id="projects" class="section">
-                <div class="row container" data-aos="zoom-in" data-aos-delay="350" data-aos-duration="1000"
-                    data-aos-once="true">
+                <div class="row container">
                     <h2 class="header center-align"><span class="projects-slashes">//</span> PROJECTS <span class="projects-slashes">//</span></h2>
                 </div>
 
@@ -244,8 +243,7 @@
                     <div class="row">
 
                         <!-- FILTER SELECTORS -->
-                        <div class="col s12 right-align button-group filters-button-group" data-aos="zoom-in-right"
-                            data-aos-delay="500" data-aos-duration="1000" data-aos-once="true">
+                        <div class="col s12 right-align button-group filters-button-group">
                             <span class="center-align button is-checked" data-filter="*">
                                 ALL
                                 <span class="projects-slashes">
@@ -272,7 +270,7 @@
                     </div>
 
                     <!-- ISOTOPE GRID -->
-                    <div class="row" data-aos="zoom-in" data-aos-delay="650" data-aos-duration="1000" data-aos-once="true">
+                    <div class="row">
 
                         <!-- DO4U -->
                         <div class="grid">
