updated contact links

--- a/index.html
+++ b/index.html
@@ -496,7 +496,7 @@
 
                                     <!-- Text -->
                                     <div class="col s12">
-                                        <a href="https://github.com/mtvickery1" target="_blank">
+                                        <a href="https://www.linkedin.com/in/masonvickery/" target="_blank">
                                             Linkedin
                                         </a>
                                     </div>
@@ -519,7 +519,7 @@
 
                                     <!-- Text -->
                                     <div class="col s12">
-                                        <a href="assets/resume/mason-vickery-resume.pdf" target="_blank">
+                                        <a href="mailto:mtvickery1@gmail.com"  target="_blank">
                                             Email
                                         </a>
                                     </div>
@@ -535,14 +535,14 @@
 
                                     <!-- Icon -->
                                     <div class="col s12">
-                                        <a href="https://github.com/mtvickery1" target="_blank">
+                                        <a href="assets/resume/mason-vickery-resume.pdf"target="_blank">
                                             <i class="far fa-file fa-5x"></i>
                                         </a>
                                     </div>
 
                                     <!-- Text -->
                                     <div class="col s12">
-                                        <a href="https://github.com/mtvickery1" target="_blank">
+                                        <a href="assets/resume/mason-vickery-resume.pdf"target="_blank">
                                             Resume
                                         </a>
                                     </div>
