--- a/index.html
+++ b/index.html
@@ -419,7 +419,7 @@
         <!-- ==============================================
         FOOTER
         =============================================== -->
-        <footer id="footer">
+        <footer class="page-footer footer">
             <div class="container">
 
                 <!-- <div class="row">
