--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                 <h2 class="header center-align col s12" data-aos="fade-down" data-aos-delay="200" data-aos-duration="1000"
                     data-aos-once="true">
 
-                    <span id="slashes">//</span> ABOUT MASON <span id="slashes">//</span>
+                    <span id="slashes">{</span> ABOUT MASON <span id="slashes">}</span>
 
                 </h2>
 
@@ -236,7 +236,7 @@
         <div class="project-section">
             <div id="projects" class="section">
                 <div class="row container">
-                    <h2 class="header center-align"><span class="projects-slashes">//</span> PROJECTS <span class="projects-slashes">//</span></h2>
+                    <h2 class="header center-align"><span class="projects-slashes">{</span> PROJECTS <span class="projects-slashes">}</span></h2>
                 </div>
 
                 <div class="container">
