--- a/index.html
+++ b/index.html
@@ -65,6 +65,10 @@
 </head>
 
 <body>
+    <!-- ==============================================
+	PRELOADER
+    =============================================== -->
+    <div class="se-pre-con"></div>
 
     <!-- ==============================================
 	TOP NAVBAR
@@ -542,6 +546,8 @@
     =============================================== -->
     <!-- Isotope.js -->
     <script src="https://unpkg.com/isotope-layout@3/dist/isotope.pkgd.min.js"></script>
+    <!-- Modernizr -->
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.2/modernizr.js"></script>
     <!-- Linking JavaScript -->
     <script src="assets/javascript/app.js"></script>
 </body>
