--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     <!-- ==============================================
 	PRELOADER
     =============================================== -->
-    <!-- <div class="se-pre-con"></div> -->
+    <div class="se-pre-con"></div>
 
     <!-- ==============================================
 	TOP NAVBAR
