--- a/index.html
+++ b/index.html
@@ -267,23 +267,23 @@
           <!-- Row -->
           <div class="row">
 
-            <!-- DO4U -->
+            <!-- TMS -->
             <div class="grid">
 
               <!-- Col -->
               <div class="col s12 m6 l4 element-item full-stack" data-category="full-stack">
                 <div class="card">
                   <div class="card-image waves-effect waves-block waves-light">
-                    <img class="activator project-img" src="assets/images/do4u.png" height="200px" width="200px">
+                    <img class="activator project-img" src="assets/images/tms-2.png" height="200px" width="200px">
                   </div>
 
                   <!-- Reveal -->
                   <div class="card-reveal">
-                    <span class="card-title">DO4U<i class="material-icons right">close</i></span>
-                    <p class="project-info">React.js, MongoDB & User Authentication</p>
+                    <span class="card-title">Trade Management Solutions<i class="material-icons right">close</i></span>
+                    <p class="project-info">React.js Web Application</p>
                     <br>
-                    <a class="project-link center-align col s6" href="https://github.com/mtvickery1/do-4-u" target="_blank">GitHub</a>
-                    <a class="project-link center-align col s6" href="https://do-4-u.herokuapp.com/" target="_blank">Deployed</a>
+                    <a class="project-link center-align col s6" href="https://github.com/mtvickery1/tms-website" target="_blank">GitHub</a>
+                    <a class="project-link center-align col s6" href="https://www.tms-lp.com/" target="_blank">Deployed</a>
                   </div>
                 </div>
               </div>
